# uDaemon

./: .clang-format-marklar  CMakeLists.txt  LICENSE  README.md
include/daemon/: udaemon.hpp
include/detail/daemon/: common.hpp  file_handler.hpp  signal_helper.hpp
test/udaemon/: CMakeLists.txt
test/udaemon/udaemon/: udaemon.cpp
